--- a/code .ipynb
+++ b/code .ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "213bfd5c",
+   "id": "b764ebfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "88124287",
+   "id": "baf5087f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9720ea7e",
+   "id": "d357e96f",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bd0a057a",
+   "id": "3a3e4c56",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6efe9d9a",
+   "id": "40d465e0",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f37dbb44",
+   "id": "013611c8",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c860a501",
+   "id": "4b842094",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "19b46129",
+   "id": "2b81f3a4",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d6f86145",
+   "id": "111a00c4",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c01c94df",
+   "id": "f6240505",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a1cb2bed",
+   "id": "dac82582",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90ff6795",
+   "id": "047e7219",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "47348fab",
+   "id": "40d170c3",
    "metadata": {},
    "outputs": [
     {
@@ -537,12 +537,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cc276e9",
+   "id": "9c5947fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# there is not a big influence of day on the booking, except in the last month"
+    "# there is not a big influence of day on the booking, except in the last of the month"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "49ff8c30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "listing_id    447826\n",
+       "available          t\n",
+       "price         7163.0\n",
+       "year            2016\n",
+       "month             10\n",
+       "day               26\n",
+       "Name: 110179, dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "othermonths.loc[othermonths['price'].idxmax()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c55fabdc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
